--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<title>Portfolio | Mike Marin</title>
-	<meta content="width=device-width, initial-scale=1" name="viewport">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 
   <!-- Material Design Lite -->
 	<link href="https://code.getmdl.io/1.3.0/material.grey-lime.min.css" rel="stylesheet">
@@ -15,43 +15,57 @@
   <!-- Custom Styles -->
 	<link href="styles/main.css" rel="stylesheet">
 </head>
+
 <body>
-	<header>
-		<header class="mdl-layout__header mdl-layout__header--transparent">
-			<h1>Mike Marin</h1>
-			<p class="slogan">I'm sure we both could do worse</p>
-		</header>
-		<main>
-			<main class="mdl-layout__content mdl-grid">
-				<div class="project featured-project mdl-grid mdl-cell mdl-cell--12-col mdl-cell--4-col-tablet mdl-card mdl-shadow--4dp">
-					<div class="mdl-cell mdl-cell--5-col mdl-cell--12-col-tablet"><img alt="project screenshot" src="http://lorempixel.com/350/260/abstract/placeholder-1"></div>
-					<div class="mdl-cell mdl-cell--7-col">
-						<h2 class="mdl-card__title-text">Featured Project Name</h2>
-						<p class="project-description mdl-card__supporting-text">Project description text</p>
-					</div>
-				</div>
-				<div class="project featured-project mdl-grid mdl-cell mdl-cell--12-col mdl-cell--4-col-tablet mdl-card mdl-shadow--4dp">
-					<div class="mdl-cell mdl-cell--5-col mdl-cell--12-col-tablet"><img alt="project screenshot" src="http://lorempixel.com/350/260/abstract/placeholder-1"></div>
-					<div class="mdl-cell mdl-cell--7-col">
-						<h2 class="mdl-card__title-text">Featured Project Name</h2>
-						<p class="project-description mdl-card__supporting-text">Project description text</p>
-					</div>
-				</div>
-				<div class="project featured-project mdl-grid mdl-cell mdl-cell--12-col mdl-cell--4-col-tablet mdl-card mdl-shadow--4dp">
-					<div class="mdl-cell mdl-cell--5-col mdl-cell--12-col-tablet"><img alt="project screenshot" src="http://lorempixel.com/350/260/abstract/placeholder-1"></div>
-					<div class="mdl-cell mdl-cell--7-col">
-						<h2 class="mdl-card__title-text">Featured Project Name</h2>
-						<p class="project-description mdl-card__supporting-text">Project description text</p>
-					</div>
-				</div>
-				<div class="project featured-project mdl-grid mdl-cell mdl-cell--12-col mdl-cell--4-col-tablet mdl-card mdl-shadow--4dp">
-					<div class="mdl-cell mdl-cell--5-col mdl-cell--12-col-tablet"><img alt="project screenshot" src="http://lorempixel.com/350/260/abstract/placeholder-1"></div>
-					<div class="mdl-cell mdl-cell--7-col">
-						<h2 class="mdl-card__title-text">Featured Project Name</h2>
-						<p class="project-description mdl-card__supporting-text">Project description text</p>
-					</div>
-				</div>
+	<header class="mdl-layout__header mdl-layout__header--transparent">
+		<h1>Mike Marin</h1>
+		<p class="slogan">Insert Catchy Job Landing Slogan Here</p>
+	</header>
+
+		<main class="mdl-layout__content mdl-grid">
+
+			<div class="project featured-project mdl-grid mdl-cell mdl-cell--12-col mdl-cell--4-col-tablet mdl-card mdl-shadow--4dp">
+				<div class="mdl-cell mdl-cell--5-col mdl-cell--12-col-tablet">
+					 <img src="http://lorempixel.com/350/260/abstract/placeholder-1" alt="project screenshot"/>
+				 </div>
+				 <div class="mdl-cell mdl-cell--7-col">
+					 <h2 class="mdl-card__title-text">Featured Project Name</h2>
+					 <p class="project-description mdl-card__supporting-text">Project description text</p>
+				 </div>
+			 </div>
+
+			 <div class="project mdl-cell mdl-card mdl-shadow--4dp">
+				 <div>
+					 <img src="http://lorempixel.com/350/260/abstract/placeholder-2" alt="project screenshot"/>
+				 </div>
+				 <div class="mdl-card__title">
+					 <h2 class="mdl-card__title-text">Project Name</h2>
+				 </div>
+				 <div class="mdl-card__supporting-text">Project description text</div>
+			 </div>
+
+			 <div class="project mdl-cell mdl-card mdl-shadow--4dp">
+				 <div>
+					 <img src="http://lorempixel.com/350/260/abstract/placeholder-3" alt="project screenshot"/>
+				 </div>
+				 <div class="mdl-card__title">
+					 <h2 class="mdl-card__title-text">Project Name</h2>
+				 </div>
+				 <div class="mdl-card__supporting-text">Project description text</div>
+			 </div>
+
+			 <div class="project mdl-cell mdl-card mdl-shadow--4dp">
+				 <div>
+					 <img src="http://lorempixel.com/350/260/abstract/placeholder-4" alt="project screenshot"/>
+				 </div>
+				 <div class="mdl-card__title">
+					 <h2 class="mdl-card__title-text">Project Name</h2>
+				 </div>
+				 <div class="mdl-card__supporting-text">Project description text</div>
+			 </div>
+
 			</main>
+
 			<footer class="mdl-mini-footer">
 				<ul class="mdl-mini-footer__link-list">
 					<li>
@@ -71,7 +85,7 @@
 					</li>
 				</ul>
 			</footer>
-		</main>
+
 	</header>
 </body>
 </html>
